styles.css
@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;700&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Abhaya Libre', serif;
}

li {
  list-style: none;
}

a {
  color: #000;
  text-decoration: none;
}

/* Desktop header */

header {
  position: fixed;

  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 8px 16px;

  width: 100%;
  height: 53px;

  background: white;
  border-bottom: 1px solid black;
}

.logo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  width: fit-content;
  height: 100%;
}

.logo img {
  width: 336px;
  height: 37px;
}

nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  width: fit-content;
  height: 100%;
}

nav ul {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 16px;

  width: fit-content;
  height: 100%;
}

nav li {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;

  width: fit-content;
  height: 100%;
}

/* Mobile header */

@media (max-width: 768px) {
  header {
    flex-direction: column;
    justify-content: center;
    padding: 0;

    height: calc(53px * 2);
  }

  .logo {
    padding: 8px 16px; /* Mirroring desktop header */

    width: 100%; /* .logo acts as header row, not just logo container */
    height: 53px; /* Header rows have identical fixed length */

    border-bottom: 1px solid black;
  }

  nav {
    justify-content: center;
    padding: 8px 16px;

    width: 100%;
    height: 53px;
  }
}

.nav-link {
  font-size: 24px;
}

/* Main section */

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: calc(36px + 53px) 36px;
  gap: 48px;

  width: 100%;
  height: fit-content;
}

@media (max-width: 768px) {
  main {
    padding: calc(36px + (53px * 2)) 16px;
  }
}

